# serializer version: 1
# name: test_list_example
  dict({
    'exit_code': 0,
    'stderr': '',
    'stdout': '''
      scenarios/example.json
          example-4287e2f2
  
    ''',
  })
# ---
# name: test_list_invalid_target
  dict({
    'exit_code': 1,
    'stderr': '''
      File at '[PWD]/test.json' is not a valid scenario: Input data was truncated.
  
    ''',
    'stdout': '',
  })
# ---
# name: test_list_invalid_target_skip_invalid
  dict({
    'exit_code': 0,
    'stderr': '',
    'stdout': '''
      [PROJECT_ROOT]/scenarios/example.json
          example-4287e2f2
  
    ''',
  })
# ---
# name: test_list_no_sources
  dict({
    'exit_code': 0,
    'stderr': '',
    'stdout': '''
      example-4287e2f2
      requires-package-only-prereleases-11aca5f4
      requires-package-only-prereleases-in-range-bc409bd0
      requires-package-prerelease-and-final-any-c18a46ab
      requires-package-prerelease-specified-only-final-available-909404f2
      requires-package-prerelease-specified-only-prerelease-available-5c9b204c
      requires-package-prerelease-specified-mixed-available-65974a95
      requires-package-multiple-prereleases-kinds-a37dce95
      requires-package-multiple-prereleases-numbers-4c3655b7
      requires-transitive-package-only-prereleases-2e76f091
      requires-transitive-package-only-prereleases-in-range-a25044b5
      requires-transitive-package-only-prereleases-in-range-opt-in-a8f715bc
      requires-package-does-not-exist-bc7df012
      requires-exact-version-does-not-exist-c275ce96
      requires-greater-version-does-not-exist-d34821ba
      requires-less-version-does-not-exist-4088ec1b
      transitive-requires-package-does-not-exist-63ca5a54
      requires-direct-incompatible-versions-1432ee4c
      requires-transitive-incompatible-with-root-version-b3c83bbd
      requires-transitive-incompatible-with-transitive-a35362d1
      requires-python-version-does-not-exist-d1fc625b
      requires-python-version-less-than-current-48bada28
      requires-python-version-greater-than-current-00f79f44
      requires-python-version-greater-than-current-many-b33dc0cb
      requires-python-version-greater-than-current-backtrack-d756219a
      requires-python-version-greater-than-current-excluded-7869d97e
  
    ''',
  })
# ---
# name: test_list_no_target_finds_all_valid_scenarios
  dict({
    'exit_code': 0,
    'stderr': '',
    'stdout': '''
      scenarios/example.json
          example-4287e2f2
      scenarios/prereleases.json
          requires-package-only-prereleases-11aca5f4
          requires-package-only-prereleases-in-range-bc409bd0
          requires-package-prerelease-and-final-any-c18a46ab
          requires-package-prerelease-specified-only-final-available-909404f2
          requires-package-prerelease-specified-only-prerelease-available-5c9b204c
          requires-package-prerelease-specified-mixed-available-65974a95
          requires-package-multiple-prereleases-kinds-a37dce95
          requires-package-multiple-prereleases-numbers-4c3655b7
          requires-transitive-package-only-prereleases-2e76f091
          requires-transitive-package-only-prereleases-in-range-a25044b5
          requires-transitive-package-only-prereleases-in-range-opt-in-a8f715bc
      scenarios/requires-does-not-exist.json
          requires-package-does-not-exist-bc7df012
          requires-exact-version-does-not-exist-c275ce96
          requires-greater-version-does-not-exist-d34821ba
          requires-less-version-does-not-exist-4088ec1b
          transitive-requires-package-does-not-exist-63ca5a54
      scenarios/requires-incompatible-versions.json
          requires-direct-incompatible-versions-1432ee4c
          requires-transitive-incompatible-with-root-version-b3c83bbd
          requires-transitive-incompatible-with-transitive-a35362d1
      scenarios/requires-python.json
          requires-python-version-does-not-exist-d1fc625b
          requires-python-version-less-than-current-48bada28
          requires-python-version-greater-than-current-00f79f44
          requires-python-version-greater-than-current-many-b33dc0cb
          requires-python-version-greater-than-current-backtrack-d756219a
          requires-python-version-greater-than-current-excluded-7869d97e
  
    ''',
  })
# ---
# name: test_list_no_versions
  dict({
    'exit_code': 0,
    'stderr': '',
    'stdout': '''
      scenarios/example.json
          example
      scenarios/prereleases.json
          requires-package-only-prereleases
          requires-package-only-prereleases-in-range
          requires-package-prerelease-and-final-any
          requires-package-prerelease-specified-only-final-available
          requires-package-prerelease-specified-only-prerelease-available
          requires-package-prerelease-specified-mixed-available
          requires-package-multiple-prereleases-kinds
          requires-package-multiple-prereleases-numbers
          requires-transitive-package-only-prereleases
          requires-transitive-package-only-prereleases-in-range
          requires-transitive-package-only-prereleases-in-range-opt-in
      scenarios/requires-does-not-exist.json
          requires-package-does-not-exist
          requires-exact-version-does-not-exist
          requires-greater-version-does-not-exist
          requires-less-version-does-not-exist
          transitive-requires-package-does-not-exist
      scenarios/requires-incompatible-versions.json
          requires-direct-incompatible-versions
          requires-transitive-incompatible-with-root-version
          requires-transitive-incompatible-with-transitive
      scenarios/requires-python.json
          requires-python-version-does-not-exist
          requires-python-version-less-than-current
          requires-python-version-greater-than-current
          requires-python-version-greater-than-current-many
          requires-python-version-greater-than-current-backtrack
          requires-python-version-greater-than-current-excluded
  
    ''',
  })
# ---
# name: test_list_one_target_does_not_exist
  dict({
    'exit_code': 1,
    'stderr': '''
      File 'foo' not found.
  
    ''',
    'stdout': '',
  })
# ---
# name: test_list_target_does_not_exist
  dict({
    'exit_code': 1,
    'stderr': '''
      File 'foo' not found.
  
    ''',
    'stdout': '',
  })
# ---
